--- a/client/src/components/Empleados/TablaAdmin.module.css
+++ b/client/src/components/Empleados/TablaAdmin.module.css
@@ -38,14 +38,9 @@
     border-bottom: 1px solid black;
 }
 
-.toUser{
-    text-decoration: none;
-    color: black;
-}
-
-.toUser:hover{
-    text-decoration: none;
-    color: #c86202d4;
+.edit:hover{
+    cursor: pointer;
+    color: #c86202;
 }
 
 @media screen and (max-width: 800px) {
