--- a/client/src/components/Landing/Landing.module.css
+++ b/client/src/components/Landing/Landing.module.css
@@ -22,6 +22,7 @@
     width: 80%;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 5vh;
     background-color: rgb(238, 238, 238);
     background-color: #fff;
     border-radius: 0.5vw;
