--- a/client/src/components/Loading/Loading2.module.css
+++ b/client/src/components/Loading/Loading2.module.css
@@ -1,10 +1,11 @@
 .center{
-    background-color: white;
+    /* background-color: white; */
+    background-color: rgb(238, 238, 238);
     display: flex;
     text-align: center;
     justify-content: center;
     align-items: center;
-    min-height: 100%;
+    min-height: 90vh;
 }
 
 .center2{
