--- a/client/src/components/EmpleadoPerfil/PerfilEmpleado.module.css
+++ b/client/src/components/EmpleadoPerfil/PerfilEmpleado.module.css
@@ -25,6 +25,57 @@
     border-radius: 0.5vw;
 }
 
+.historial{
+    text-align: center;
+    text-decoration: underline;
+    margin-top: 3vh;
+}
+
+.bottom {
+    width: 60%;
+    max-width: 96%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1vh;
+    margin-bottom: 4vh;
+    background-color: #fff;
+    border-radius: 0.5vw;
+}
+
+.up{
+    display: flex;
+    flex-direction: row;
+    border-bottom: 2px solid black;
+    padding-bottom: 0.4vh;
+    margin-bottom: 1vh;
+}
+
+.hora{
+    font-size: 1.2rem;
+    min-width: 1.2rem;
+    text-align: center;
+    width: 33.5%;
+}
+
+.horas{
+    font-size: 1.2rem;
+    width: 33%;
+    text-align: center;
+}
+
+@media screen and (max-width: 900px) {
+    .bottom {
+        width: 80%;
+    }
+    .hora{
+        font-size: 1rem;
+    }
+    .horas{
+        font-size: 1rem;
+    }
+}
+
+
 @media screen and (max-width: 800px) {
     .down {
         width: 70%;
@@ -35,6 +86,15 @@
     .down {
         width: 80%;
         font-size: small;
+    }
+    .bottom {
+        width: 96%;
+    }
+    .hora{
+        font-size: 0.9rem;
+    }
+    .horas{
+        font-size: 0.9rem;
     }
 }
 
